<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/btnStartRaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/raw"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btnStartVideoRaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="Videoplay"
            android:text="@string/videoraw"
            android:textSize="12sp"/>
</LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/btnPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/pause"
            android:textSize="12sp">
        </Button>
        <Button
            android:id="@+id/btnResume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/resume"
            android:textSize="12sp">
        </Button>
        <Button
            android:id="@+id/btnStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/stop"
            android:textSize="12sp">
        </Button>
        <CheckBox
            android:id="@+id/chbLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop">
        </CheckBox>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnBackward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/backward"
            android:textSize="12sp">

        </Button>

        <Button
            android:id="@+id/btnForward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/forward"
            android:textSize="12sp">

        </Button>
    </LinearLayout>

    <VideoView
        android:id="@+id/videoPlayer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout3"
        android:layout_above="@+id/linearLayout4"
        android:onClick="Videoplay" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/btnVideoPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onVideoClick"
            android:text="Videopause"
            android:textSize="12sp">
        </Button>
        <Button
            android:id="@+id/btnVideoResume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onVideoClick"
            android:text="Videoplay"
            android:textSize="12sp">
        </Button>
        <Button
            android:id="@+id/btnVideoStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onVideoClick"
            android:text="Videostop"
            android:textSize="12sp">
        </Button>
    </LinearLayout>

</RelativeLayout>